--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -4,4 +4,10 @@ $subtitle-color-font: #d7d5eb;
 $description-color-font: #8a87aa;
 $password-background: #2c1746;
 $pink: #fd58ff;
+$weak:  #e71b32;
+$medium: #faf408;
+$strong: #00ff85;
+$empty: #2c1746;
+
+
 
