--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -69,6 +70,23 @@ h1 {
     width: 100%;
     padding: 35px 40px;
 
+    .settings-title {
+        font-family: "Roboto Mono", monospace;
+        font-size: 28px;
+        margin-top: 0;
+        margin-bottom: 38px;;
+    }
+
+    .settings-wrapper {
+        display: flex;
+        justify-content: space-between;
+
+        .settings-description {
+            font-size: 24px;
+            margin-top: 0;
+        }
+    }
+
     .input-range {
         -webkit-appearance: none;
         border-radius: 4px;
@@ -77,9 +95,48 @@ h1 {
         outline: none;
         opacity: 0.7;
         transition: opacity .15s ease-in-out;
+        width: 100%;;
     }
 
     .input-range::-ms-fill-lower {
         background-color: white;
     }
+}
+
+.password-type-checkbox {
+
+    font-size: 20px;
+
+    input {
+        width: 24px;
+        height: 24px;
+    }
+    .checkbox-wrapper {
+        margin-bottom: 16px;
+    }
+}
+
+.force-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    .box {
+        width: 100%;
+        height: 32px;
+        background-color: $empty;
+            
+        &.weak {
+            background-color: $weak;
+        }
+        
+        &.medium {
+            background-color: $medium;
+        }
+        
+        &.strong {
+            background-color: $strong;
+        }
+
+    }
+
 }
