--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,14 @@ h1 {
 .settings-container .input-range::-ms-fill-lower {
   background-color: white;
 }
+.settings-container .input-typed {
+  max-width: 80px;
+  font-size: 24px;
+  height: 50px;
+  border: 1px solid #694a81;
+  background-color: #2c1746;
+  margin-top: 24px;
+}
 
 .password-type-checkbox {
   font-size: 20px;
