--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -95,11 +95,20 @@ h1 {
         outline: none;
         opacity: 0.7;
         transition: opacity .15s ease-in-out;
-        width: 100%;;
+        width: 100%;
     }
 
     .input-range::-ms-fill-lower {
         background-color: white;
+    }
+
+    .input-typed {
+        max-width: 80px;
+        font-size: 24px;
+        height: 50px;
+        border: 1px solid $input-border;
+        background-color: $input-background;
+        margin-top: 24px;
     }
 }
 
