--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #0F021b;
+  background-color: #0f021b;
   color: #8a87aa;
   box-sizing: border-box;
   margin: 0;
@@ -25,6 +25,7 @@ h1 {
   justify-content: center;
   align-items: center;
   margin: auto;
+  margin-top: 24px;
 }
 .content-wrapper .subtitle {
   margin-top: 8px;
@@ -52,6 +53,7 @@ h1 {
   font-size: 40px;
   font-weight: 500;
   color: #fff;
+  margin: 0;
 }
 .password-container-card .actions-wrapper {
   display: flex;
@@ -87,8 +89,14 @@ h1 {
   transition: opacity 0.15s ease-in-out;
   width: 100%;
 }
-.settings-container .input-range::-ms-fill-lower {
-  background-color: white;
+.settings-container input[type=range]::-webkit-slider-thumb {
+  width: 28px;
+  -webkit-appearance: none;
+  height: 28px;
+  border-radius: 50%;
+  z-index: 10000;
+  cursor: ew-resize;
+  background: white;
 }
 .settings-container .input-typed {
   max-width: 80px;
@@ -105,12 +113,16 @@ h1 {
 .password-type-checkbox input {
   width: 24px;
   height: 24px;
+  accent-color: #fff;
+  margin-right: 12px;
 }
 .password-type-checkbox input.filled {
   background-color: #fff;
   color: black;
 }
 .password-type-checkbox .checkbox-wrapper {
+  display: flex;
+  align-items: center;
   margin-bottom: 16px;
 }
 
@@ -144,7 +156,7 @@ h1 {
   background-color: #00ff85 !important;
 }
 
-.copy-button {
+.generate-button {
   margin-top: 36px;
   outline: none;
   border: none;
