--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,15 +1,12 @@
-$background-color: #0F021b;
+$background-color: #0f021b;
 $principal-color-font: #fff;
 $subtitle-color-font: #d7d5eb;
 $description-color-font: #8a87aa;
 $password-background: #2c1746;
 $pink: #fd58ff;
-$weak:  #e71b32;
+$weak: #e71b32;
 $medium: #faf408;
 $strong: #00ff85;
 $empty: #2c1746;
 $input-border: #694a81;
 $input-background: #2c1746;
-
-
-
